--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.sunshine">
 
+    <!-- add the INTERNET permission-->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
